fix: ошибка в консоли 404 от img

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://marinanasonkina.github.io/mesto-react/",
+  "homepage": "https://marinanasonkina.github.io/mesto-react",
   "name": "mesto",
   "version": "0.1.0",
   "private": true,
